.archive/clusters/homelab-1/.network-policies/allow-egress-to-dragonfly/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-dragonfly
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              networking/allow-egress-to-dragonfly: "true"
      ports:
        - protocol: TCP
          port: 6379
